font size change

--- a/kernel.tex
+++ b/kernel.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper,fleqn,12pt]{JMThesis}
+\renewcommand{\footnotesize}{\fontsize{9pt}{11pt}\selectfont}
 \usepackage{listings}
 \lstset{
     basicstyle=\footnotesize,
@@ -810,7 +811,7 @@ videti u pochetnom fajlu.
 \begin{minipage}{\textwidth}\eng\lstinputlisting[language=C]{include/05.irq/idt4.c}\srb\end{minipage}
 \begin{minipage}{\textwidth}\eng\lstinputlisting[language=C]{include/05.irq/idt5.c}\srb\end{minipage}
 \begin{minipage}{\textwidth}\eng\lstinputlisting[language=C]{include/05.irq/idt6.c}\srb\end{minipage}
-\begin{minipage}{\textwidth}\eng\lstinputlisting[language=C]{include/05.irq/idt7.c}\srb\end{minipage}
+\begin{minipage}{\textwidth}\eng\lstinputlisting[language=C,linerange={1-6,34-37}]{include/05.irq/idt7.c}\srb\end{minipage}
 \begin{minipage}{\textwidth}\eng\lstinputlisting[language=C]{include/05.irq/idt8.c}\srb\end{minipage}
 \begin{minipage}{\textwidth}\eng\lstinputlisting[language=C]{include/05.irq/idt9.c}\srb\end{minipage}
 
